--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt">
 
 <head>
     <!-- Required meta tags -->
@@ -24,7 +24,7 @@
         crossorigin="anonymous" />
 
 
-    <title>QR Code Generator using JavaScript - @code.scientist x @codingtorque</title>
+    <title>QR Code Generator using JavaScript</title>
 
 </head>
 
@@ -32,7 +32,7 @@
     <form>
         <h2 class="heading">QR Code Generator</h2>
 
-        <input type="url" id="website" name="website" placeholder="https://codingtorque.com" required />
+        <input type="url" id="website" name="website" placeholder="digite a url" required />
 
         <div id="qrcode-container">
             <div id="qrcode" class="qrcode"></div>
